--- a/package.json
+++ b/package.json
@@ -57,9 +57,8 @@
       "lib": "dist/system"
     },
     "dependencies": {
-      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@1.0.0-beta.1",
+      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1.0.1",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.0.2",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.0.5",
       "extend": "npm:extend@^3.0.0",
       "querystring": "github:jspm/nodelibs-querystring@^0.1.0"
     },
