--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "conventional-changelog": "0.0.11",
     "cors": "^2.7.1",
     "del": "^1.1.0",
-    "escope": "^3.3.0",
+    "escope": "3.3.0",
     "express": "^4.13.3",
     "gulp": "^3.8.10",
     "gulp-babel": "^5.1.0",
