--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-babel": "^5.1.0",
     "gulp-bump": "^0.3.1",
     "gulp-eslint": "^1.1.1",
+    "gulp-remark": "^1.0.0",
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.1.3",
     "jspm": "0.16.15",
@@ -45,6 +46,7 @@
     "karma-jasmine": "^0.3.6",
     "karma-jspm": "^2.0.2",
     "object.assign": "^1.0.3",
+    "remark-lint": "^3.0.0",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
     "snyk": "^1.8.4",
