--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1.1.3",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.0",
       "extend": "npm:extend@^3.0.0",
-      "querystring": "github:jspm/nodelibs-querystring@^0.1.0"
+      "qs": "npm:qs@^6.1.0"
     },
     "devDependencies": {
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.1.3",
