--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/SpoonX/aurelia-api/issues"
   },
   "scripts": {
-    "test": "snyk test && ./node_modules/.bin/gulp test"
+    "test": "./node_modules/.bin/gulp test"
   },
   "license": "MIT",
   "author": "RWOverdijk <wesley@spoonx.nl> (http://spoonx.nl/)",
