--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,13 @@ notifications:
 node_js:
   - '4'
 before_install:
+  - npm install -g jspm
+  - jspm config registries.github.auth U3Bvb25YOjY2NWIxYWQ2ZTM4ZjUxZGNjMzcwNDBkYzMxYjgxZGVkZjE1M2RjYjg=
   - npm i -g npm@^2.0.0
 before_script:
+  - jspm i
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - npm prune
 after_success:
   - npm run semantic-release
