--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
       "core-js": "npm:core-js@^1.1.4",
       "fetch": "github:github/fetch@^0.11.0"
     }
+  },
+  "dependencies": {
+    "yargs": "^4.3.2"
   }
 }
