--- a/package.json
+++ b/package.json
@@ -12,33 +12,74 @@
   "bugs": {
     "url": "https://github.com/SpoonX/aurelia-api/issues"
   },
-  "scripts": {
-    "test": "./node_modules/.bin/gulp test"
-  },
   "license": "MIT",
   "author": "RWOverdijk <wesley@spoonx.nl> (http://spoonx.nl/)",
-  "main": "dist/system/index.js",
+  "main": "dist/commonjs/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/SpoonX/aurelia-api"
   },
+  "scripts": {
+    "test": "./node_modules/.bin/gulp test"
+  },
+  "jspm": {
+    "registry": "npm",
+    "jspmPackage": true,
+    "main": "aurelia-api",
+    "format": "amd",
+    "directories": {
+      "dist": "dist/amd"
+    },
+    "dependencies": {
+      "aurelia-dependency-injection": "^1.0.0-beta.1.1.5",
+      "aurelia-fetch-client": "^1.0.0-beta.1.1.1",
+      "extend": "^3.0.0",
+      "qs": "^6.1.0"
+    },
+    "peerDependencies": {
+      "aurelia-dependency-injection": "^1.0.0-beta.1.1.5",
+      "aurelia-fetch-client": "^1.0.0-beta.1.1.1",
+      "extend": "^3.0.0",
+      "qs": "^6.1.0"
+    },
+    "devDependencies": {
+      "aurelia-polyfills": "^1.0.0-beta.1.0.6",
+      "babel": "babel-core@^5.8.24",
+      "babel-runtime": "^5.8.24",
+      "core-js": "^1.1.4",
+      "fetch": "github:github/fetch@^0.11.0"
+    }
+  },
+  "dependencies": {
+    "aurelia-dependency-injection": "^1.0.0-beta.1.1.5",
+    "aurelia-fetch-client": "^1.0.0-beta.1.1.1",
+    "extend": "^3.0.0",
+    "qs": "^6.1.0"
+  },
   "devDependencies": {
-    "aurelia-tools": "^0.1.18",
+    "aurelia-tools": "^0.1.20",
     "babel-eslint": "^4.1.3",
+    "babel-plugin-syntax-flow": "^6.5.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
+    "babel-plugin-transform-flow-strip-types": "^6.7.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-stage-1": "^6.5.0",
     "body-parser": "^1.14.2",
     "conventional-changelog": "0.0.17",
     "cors": "^2.7.1",
     "del": "^2.2.0",
     "express": "^4.13.3",
     "gulp": "^3.8.10",
-    "gulp-babel": "^5.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-bump": "^2.0.1",
     "gulp-eslint": "^1.1.1",
-    "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.1.3",
-    "jspm": "0.16.15",
     "karma": "^0.13.15",
-    "karma-babel-preprocessor": "^5.2.2",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
     "karma-firefox-launcher": "^0.1.7",
@@ -49,30 +90,6 @@
     "run-sequence": "^1.0.2",
     "snyk": "^1.8.4",
     "vinyl-paths": "^2.1.0",
-    "yargs": "^2.1.1"
-  },
-  "jspm": {
-    "main": "index",
-    "format": "register",
-    "directories": {
-      "lib": "dist/system"
-    },
-    "dependencies": {
-      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1.1.4",
-      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.1",
-      "extend": "npm:extend@^3.0.0",
-      "qs": "npm:qs@^6.1.0"
-    },
-    "devDependencies": {
-      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.1.4",
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.0.0",
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4",
-      "fetch": "github:github/fetch@^0.11.0"
-    }
-  },
-  "dependencies": {
     "yargs": "^4.3.2"
   }
 }
