--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-bump": "^2.0.1",
     "gulp-eslint": "^1.1.1",
+    "gulp-remark": "^1.1.5",
     "jasmine-core": "^2.1.3",
     "karma": "^0.13.15",
     "karma-babel-preprocessor": "^6.0.1",
@@ -86,6 +87,12 @@
     "karma-jasmine": "^0.3.6",
     "karma-jspm": "^2.0.2",
     "object.assign": "^1.0.3",
+    "remark": "^4.1.2",
+    "remark-lint": "^3.0.0",
+    "remark-normalize-headings": "^0.3.0",
+    "remark-squeeze-paragraphs": "^3.0.0",
+    "remark-toc": "^3.0.0",
+    "remark-validate-links": "^3.0.0",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
     "snyk": "^1.8.4",
