--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "aurelia-tools": "^0.1.20",
+    "babel-dts-generator": "^0.4.7",
     "babel-eslint": "^4.1.3",
     "babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -76,8 +77,13 @@
     "gulp": "^3.8.10",
     "gulp-babel": "^6.1.2",
     "gulp-bump": "^2.0.1",
+    "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.1.1",
     "gulp-remark": "^1.1.5",
+    "gulp-insert": "^0.5.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-typedoc": "^1.2.1",
+    "gulp-typedoc-extractor": "0.0.8",
     "jasmine-core": "^2.1.3",
     "karma": "^0.13.15",
     "karma-babel-preprocessor": "^6.0.1",
@@ -96,6 +102,7 @@
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
     "snyk": "^1.8.4",
+    "through2": "^2.0.0",
     "vinyl-paths": "^2.1.0",
     "yargs": "^4.3.2"
   }
