doc(README): Update and link to new docs

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "fetch",
     "fetch-client"
   ],
-  "homepage": "https://github.com/SpoonX/aurelia-api",
+  "homepage": "http://aurelia-api.spoonx.org/",
   "bugs": {
     "url": "https://github.com/SpoonX/aurelia-api/issues"
   },
