--- a/package.json
+++ b/package.json
@@ -31,14 +31,9 @@
       "dist": "dist/amd"
     },
     "dependencies": {
-      "aurelia-dependency-injection": "^1.0.0-beta.1.2.0",
-      "aurelia-fetch-client": "^1.0.0-beta.1.2.0",
-      "extend": "^3.0.0",
-      "qs": "^6.1.0"
-    },
-    "peerDependencies": {
-      "aurelia-dependency-injection": "^1.0.0-beta.1.2.0",
-      "aurelia-fetch-client": "^1.0.0-beta.1.2.0",
+      "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
+      "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
+      "aurelia-http-client": "^1.0.0-beta.1.2.1",
       "extend": "^3.0.0",
       "qs": "^6.1.0"
     },
