refactor(rest): replace qs with aurelia-path
closes https://github.com/SpoonX/aurelia-api/issues/70

--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
       "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
       "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
       "aurelia-http-client": "^1.0.0-beta.1.2.1",
-      "extend": "^3.0.0",
-      "qs": "^6.1.0"
+      "aurelia-path": "^1.0.0-beta.1.2.2",
+      "extend": "^3.0.0"
     },
     "peerDependencies": {
       "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
       "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
       "aurelia-http-client": "^1.0.0-beta.1.2.1",
-      "extend": "^3.0.0",
-      "qs": "^6.1.0"
+      "aurelia-path": "^1.0.0-beta.1.2.2",
+      "extend": "^3.0.0"
     },
     "devDependencies": {
       "aurelia-pal-browser": "^1.0.0-beta.1.2.1",
@@ -54,8 +54,8 @@
     "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
     "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
     "aurelia-http-client": "^1.0.0-beta.1.2.1",
-    "extend": "^3.0.0",
-    "qs": "^6.1.0"
+    "aurelia-path": "^1.0.0-beta.1.2.2",
+    "extend": "^3.0.0"
   },
   "devDependencies": {
     "aurelia-tools": "^0.1.20",
