--- a/package.json
+++ b/package.json
@@ -33,16 +33,21 @@
     "dependencies": {
       "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
       "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-      "extend": "^3.0.0",
-      "qs": "^6.1.0"
+      "aurelia-http-client": "^1.0.0-beta.1.2.1",
+      "aurelia-loader-default": "^1.0.0-beta.1.2.2",
+      "aurelia-path": "^1.0.0-beta.1.2.2",
+      "extend": "^3.0.0"
     },
     "peerDependencies": {
       "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
       "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-      "extend": "^3.0.0",
-      "qs": "^6.1.0"
+      "aurelia-http-client": "^1.0.0-beta.1.2.1",
+      "aurelia-loader-default": "^1.0.0-beta.1.2.2",
+      "aurelia-path": "^1.0.0-beta.1.2.2",
+      "extend": "^3.0.0"
     },
     "devDependencies": {
+      "aurelia-pal-browser": "^1.0.0-beta.1.2.1",
       "aurelia-polyfills": "^1.0.0-beta.1.1.6",
       "fetch": "github:github/fetch@^1.0.0"
     }
@@ -50,8 +55,10 @@
   "dependencies": {
     "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
     "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-    "extend": "^3.0.0",
-    "qs": "^6.1.0"
+    "aurelia-http-client": "^1.0.0-beta.1.2.1",
+    "aurelia-loader-default": "^1.0.0-beta.1.2.2",
+    "aurelia-path": "^1.0.0-beta.1.2.2",
+    "extend": "^3.0.0"
   },
   "devDependencies": {
     "aurelia-tools": "^0.1.20",
