--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
     "karma-jspm": "^2.0.2",
+    "multer": "^1.1.0",
     "object.assign": "^1.0.3",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
