refactor(rest): use aurelia-path instead of qs

--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "dependencies": {
       "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
       "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-      "extend": "^3.0.0",
-      "qs": "^6.1.0"
+      "aurelia-path": "^1.0.0-beta.1.2.2",
+      "extend": "^3.0.0"
     },
     "peerDependencies": {
       "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
       "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-      "extend": "^3.0.0",
-      "qs": "^6.1.0"
+      "aurelia-path": "^1.0.0-beta.1.2.2",
+      "extend": "^3.0.0"
     },
     "devDependencies": {
       "aurelia-polyfills": "^1.0.0-beta.1.1.6",
@@ -50,8 +50,8 @@
   "dependencies": {
     "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
     "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-    "extend": "^3.0.0",
-    "qs": "^6.1.0"
+    "aurelia-path": "^1.0.0-beta.1.2.2",
+    "extend": "^3.0.0"
   },
   "devDependencies": {
     "aurelia-tools": "^0.1.20",
