--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
     "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-    "extend": "^3.0.0",
-    "qs": "^6.1.0"
+    "aurelia-path": "^1.0.0-beta.1.2.2",
+    "extend": "^3.0.0"
   }
 }
