--- a/package.json
+++ b/package.json
@@ -31,26 +31,26 @@
       "dist": "dist/amd"
     },
     "dependencies": {
-      "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
-      "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-      "aurelia-path": "^1.0.0-beta.1.2.2",
+      "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
+      "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
+      "aurelia-path": "^1.0.0-rc.1.0.0",
       "extend": "^3.0.0"
     },
     "peerDependencies": {
-      "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
-      "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-      "aurelia-path": "^1.0.0-beta.1.2.2",
+      "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
+      "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
+      "aurelia-path": "^1.0.0-rc.1.0.0",
       "extend": "^3.0.0"
     },
     "devDependencies": {
-      "aurelia-polyfills": "^1.0.0-beta.1.1.6",
+      "aurelia-polyfills": "^1.0.0-rc.1.0.0",
       "fetch": "github:github/fetch@^1.0.0"
     }
   },
   "dependencies": {
-    "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
-    "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-    "aurelia-path": "^1.0.0-beta.1.2.2",
+    "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
+    "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
+    "aurelia-path": "^1.0.0-rc.1.0.0",
     "extend": "^3.0.0"
   },
   "devDependencies": {
