chore(poject): dep and build update

--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,9 @@
     "url": "https://github.com/SpoonX/aurelia-api"
   },
   "dependencies": {
-    "aurelia-dependency-injection": "^1.0.0-beta.1.2.3",
-    "aurelia-fetch-client": "^1.0.0-beta.1.2.5",
-    "aurelia-path": "^1.0.0-beta.1.2.2",
+    "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
+    "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
+    "aurelia-path": "^1.0.0-rc.1.0.0",
     "extend": "^3.0.0"
   }
 }
