--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
     "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
-    "aurelia-path": "^1.0.0-rc.1.0.0",
-    "extend": "^3.0.0"
+    "aurelia-path": "^1.0.0-rc.1.0.0"
   }
 }
