--- a/package.json
+++ b/package.json
@@ -34,14 +34,12 @@
     "dependencies": {
       "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
       "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
-      "aurelia-path": "^1.0.0-rc.1.0.0",
-      "extend": "^3.0.0"
+      "aurelia-path": "^1.0.0-rc.1.0.0"
     },
     "peerDependencies": {
       "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
       "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
-      "aurelia-path": "^1.0.0-rc.1.0.0",
-      "extend": "^3.0.0"
+      "aurelia-path": "^1.0.0-rc.1.0.0"
     },
     "devDependencies": {
       "aurelia-polyfills": "^1.0.0-rc.1.0.0",
@@ -51,8 +49,7 @@
   "dependencies": {
     "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
     "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
-    "aurelia-path": "^1.0.0-rc.1.0.0",
-    "extend": "^3.0.0"
+    "aurelia-path": "^1.0.0-rc.1.0.0"
   },
   "devDependencies": {
     "aurelia-tools": "^0.2.3",
