--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
       "dist": "dist/amd"
     },
     "dependencies": {
-      "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
-      "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
+      "aurelia-dependency-injection": "^1.0.0-rc.1.0.1",
+      "aurelia-fetch-client": "^1.0.0-rc.1.0.1",
       "aurelia-path": "^1.0.0-rc.1.0.0",
       "extend": "^3.0.0"
     },
     "peerDependencies": {
-      "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
-      "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
+      "aurelia-dependency-injection": "^1.0.0-rc.1.0.1",
+      "aurelia-fetch-client": "^1.0.0-rc.1.0.1",
       "aurelia-path": "^1.0.0-rc.1.0.0",
       "extend": "^3.0.0"
     },
@@ -49,8 +49,8 @@
     }
   },
   "dependencies": {
-    "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
-    "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
+    "aurelia-dependency-injection": "^1.0.0-rc.1.0.1",
+    "aurelia-fetch-client": "^1.0.0-rc.1.0.1",
     "aurelia-path": "^1.0.0-rc.1.0.0",
     "extend": "^3.0.0"
   },
@@ -108,5 +108,10 @@
     "vinyl": "^1.1.1",
     "vinyl-paths": "^2.1.0",
     "yargs": "^4.7.1"
+  },
+  "aurelia": {
+    "build": {
+      "resources": []
+    }
   }
 }
