--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "require-dir": "^0.3.0",
     "spoonx-tools": "github:doktordirk/spoonx-tools#initial"
   },
   "aurelia": {
