--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-api",
-  "version": "3.0.0-rc6",
+  "version": "3.0.0-rc7",
   "description": "A simple api wrapper around aurelia-fetch-client",
   "keywords": [
     "aurelia",
@@ -14,6 +14,9 @@
   },
   "license": "MIT",
   "author": "RWOverdijk <wesley@spoonx.nl> (http://spoonx.nl/)",
+  "contributors": [
+    "Dirk Eisinger <doktordirk@outlook.de>"
+  ],
   "main": "dist/commonjs/aurelia-api.js",
   "typings": "dist/aurelia-api.d.ts",
   "repository": {
