feat(project): proper types

--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
     "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
+    "aurelia-framework": "^1.0.0-rc.1.0.0",
     "aurelia-path": "^1.0.0-rc.1.0.0",
     "extend": "^3.0.0"
   }
