chore(project): bump 3.0.0

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-api",
-  "version": "3.0.0-rc9",
+  "version": "3.0.0",
   "description": "A simple api wrapper around aurelia-fetch-client",
   "keywords": [
     "aurelia",
@@ -23,10 +23,10 @@
     "url": "https://github.com/SpoonX/aurelia-api"
   },
   "dependencies": {
-    "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
-    "aurelia-fetch-client": "^1.0.0-rc.1.0.0",
-    "aurelia-framework": "^1.0.0-rc.1.0.0",
-    "aurelia-path": "^1.0.0-rc.1.0.0",
+    "aurelia-dependency-injection": "^1.0.0",
+    "aurelia-fetch-client": "^1.0.0",
+    "aurelia-framework": "^1.0.0",
+    "aurelia-path": "^1.0.0",
     "extend": "^3.0.0"
   }
 }
