chore(project): cleanup and tools dep 1.0.0-0

--- a/package.json
+++ b/package.json
@@ -65,9 +65,8 @@
     "extend": "^3.0.0"
   },
   "devDependencies": {
-    "spoonx-tools": "^0.4.0",
-    "multer": "^1.2.0"
-
+    "multer": "^1.2.0",
+    "spoonx-tools": "^1.0.0-0"
   },
   "aurelia": {
     "build": {
