chore(project): replace fetch with whatwg-fetch for testing

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     },
     "devDependencies": {
       "aurelia-polyfills": "^1.0.0",
-      "fetch": "github:github/fetch@^1.0.0"
+      "whatwg-fetch": "^2.0.4"
     }
   },
   "dependencies": {
